--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: snipbox-dev
     ports:
       - "4000:4000" # default app port
-      # - "4001:4001" # air proxy port
+      - "4001:4001" # air proxy port
     env_file:
       - .env
     volumes:
