--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
       target: development
-    container_name: snipbox-dev
+    container_name: greenlight-dev
     ports:
       - "4000:4000" # default app port
       - "4001:4001" # air proxy port
